tests/ui/parser/recover/recover-missing-semi.stderr
error: expected `;`, found keyword `let`
  --> $DIR/recover-missing-semi.rs:2:22
   |
LL |     let _: usize = ()
   |                      ^ help: add `;` here
...
LL |     let _ = 3;
   |     --- unexpected token

error: expected `;`, found keyword `return`
  --> $DIR/recover-missing-semi.rs:9:22
   |
LL |     let _: usize = ()
   |                      ^ help: add `;` here
...
LL |     return 3;
   |     ------ unexpected token

error[E0308]: mismatched types
  --> $DIR/recover-missing-semi.rs:2:20
   |
LL |     let _: usize = ()
   |            -----   ^^ expected `usize`, found `()`
   |            |
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/recover-missing-semi.rs:9:20
   |
LL |     let _: usize = ()
   |            -----   ^^ expected `usize`, found `()`
   |            |
   |            expected due to this

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
